Fix outer border for dark mode, was invisible on black background

--- a/src/client/css/base.css
+++ b/src/client/css/base.css
@@ -376,7 +376,7 @@ tidal-progress-bar {
   height: 100vh;
   overflow: hidden;
   border-radius: 12px;
-  border: 1px solid rgba(0, 0, 0, 0.10);
+  border: 1px solid light-dark(rgba(0, 0, 0, 0.10), rgba(255, 255, 255, 0.10));
   position: relative;
 }
 
